adding recent update.

--- a/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary.ipynb
@@ -393,7 +393,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -500,6 +500,26 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40.6"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Fortuna_df[\"Lat\"].values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -507,7 +527,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5496a19ee0bf422597750539796c0b8a",
+       "model_id": "fb75279280484241bef6f887118c8d5f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -522,10 +542,10 @@
    "source": [
     "#Use the directions Layer instructions from the gmaps documentation to build directions layer\n",
     "\n",
-    "Fortuna = (40.6, -124.16)\n",
-    "Hillsborough = (37.57, -122.38)\n",
-    "Lompoc = (34.64, -120.46)\n",
-    "SanGabriel = (34.1, -118.11)\n",
+    "Fortuna = Fortuna_df[\"Lat\"].values[0],Fortuna_df[\"Lng\"].values[0]\n",
+    "Hillsborough = Hillsborough_df[\"Lat\"].values[0],Hillsborough_df[\"Lng\"].values[0]\n",
+    "Lompoc = Lompoc_df[\"Lat\"].values[0],Lompoc_df[\"Lng\"].values[0]\n",
+    "SanGabriel = SanGabriel_df[\"Lat\"].values[0],SanGabriel_df[\"Lng\"].values[0]\n",
     "\n",
     "fig = gmaps.figure()\n",
     "Fortuna2SanGabriel_via_HillsboroughAndLompoc = gmaps.directions_layer(Fortuna, SanGabriel, waypoints=[Hillsborough, Lompoc], travel_mode='DRIVING')\n",
@@ -535,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,13 +582,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4fccf17e6ef34e588dd9cccc370f0cec",
+       "model_id": "0a2fd02e598243b59e9863099a5d5b31",
        "version_major": 2,
        "version_minor": 0
       },
